adding Contact File controller and corrected images
